--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,6 @@ dist.dir=dist
 dist.jar=${dist.dir}/ATMSimulator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.ATMSimulator-ATMSimulator=ATMSimulator
 includes=**
 jar.compress=false
 javac.classpath=
@@ -41,7 +40,10 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.testng.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -66,9 +68,10 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.security.policy=applet.policy
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.ATMSimulator-ATMSimulator}
+src.dir=src
+test.src.dir=test
